--- a/programming_practice/ch04/client.html
+++ b/programming_practice/ch04/client.html
@@ -1,3 +1,4 @@
+\
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -5,9 +6,10 @@
 </head>
 <body>
 <form action="http://127.0.0.1:8080/process?hello=world&thread=123" method="post"
-      enctype="application/x-www-form-urlencoded">
+      enctype="application/x-www-form-urlencoded" enctype="multipart/form-data">
     <input type="text" name="hello" value="sau sheong"/>
     <input type="text" name="post" value="456"/>
+    <input type="file" name="uploaded"/>
     <input type="submit"/>
 </form>
 </body>
